<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
	<string name="app_name">Mycelium</string>
	<string name="install_qr_scanner">Please install ZXing QR-code scanner.</string>
	<string name="add">+</string>
	<string name="add_dialog_title">Add Address or Private Key</string>
	<string name="scan_desc">Scan bitcoin address or private key.</string>
	<string name="clipboard_desc">Import bitcoin address or private key from clipboard.</string>
	<string name="random_desc">Create a new random private key.</string>
	<string name="scan">Scan</string>
    <string name="clipboard">Clipboard</string>
	<string name="random">Random</string>
	<string name="close">Close</string>
	<string name="btc_value_string">%1$s %2$s</string>
	<string name="sending">Sending %1$s</string>
	<string name="receiving">Receiving %1$s</string>
	<string name="invalid_seed">The seed is not a valid ASCII string.</string>
	<string name="imported_bitcoin_address">Imported Bitcoin address.</string>
	<string name="imported_private_key">Imported private key.</string>
	<string name="key_already_present">The private key was already present</string>
	<string name="upgraded_address_to_key">Upgraded Bitcoin address with private key</string>
	<string name="address_already_present">The Bitcoin address was already monitored</string>
	<string name="an_icon">an icon</string>
	<string name="confirmations">%d Confirmations</string>
	<string name="send">Send</string>
	<string name="receive">Receive</string>
	<string name="private_key_deleted">Private key deleted, Bitcoin address kept.</string>
	<string name="bitcoin_address_deleted">Bitcoin address deleted</string>
	<string name="new_bitcoin_address_created">A new random private key has been generated with the following Bitcoin address:</string>
	<string name="shuffle">Shuffle</string>
	<string name="use">Use</string>
    <string name="keys_and_addresses">Keys &amp; Addresses</string>
    <string name="select_spending_address">Select Spending Address</string>
    <string name="amount_hint">0.00</string>
    <string name="receiver">Receiver:</string>
    <string name="amount">Amount:</string>
    <string name="btc">BTC</string>
    <string name="sample_address">1Bmc9QwQgmuN\r\nWTxo5PjzPWeS\r\nF4d3aHx6hH</string>
    <string name="btc_balance">Balance: %1$s</string>
    <string name="fiat_balance">Balance: %1$.2f %2$s</string>
    <string name="qr_code">QR-Code</string>
    <string name="address_book">Address Book</string>
    <string name="get_receiver_address">Get receiver address from:</string>
	<string name="one">1</string>
	<string name="two">2</string>
	<string name="three">3</string>
	<string name="four">4</string>
	<string name="five">5</string>
	<string name="six">6</string>
	<string name="seven">7</string>
	<string name="eight">8</string>
	<string name="nine">9</string>
	<string name="zero">0</string>
	<string name="del">&lt;</string>
	<string name="dot">.</string>
	<string name="next">Next</string>
	<string name="insufficient_funds">Insufficient funds</string>
	<string name="insufficient_funds_for_fee">Insufficient funds to pay fee</string>
	<string name="amount_too_small">The amount you are sending is too small</string>
	<string name="fee">Miner fee:</string>
	<string name="synchronizing">Synchronizing</string>
	<string name="transaction_not_sent">Failed to broadcast transaction</string>
	<string name="transaction_sent">Transaction sent</string>
	<string name="open">Open</string>
	<string name="show_address">Show Address</string>
	<string name="export">Export</string>
	<string name="delete_private_key">Delete Private Key</string>
	<string name="delete_address">Delete Address</string>
	<string name="invoice">Invoice</string>
	<string name="copy_to_clipboard">Copy to Clipboard</string>
	<string name="copy_address_to_clipboard">Copy Address to Clipboard</string>
	<string name="copy_private_key_to_clipboard">Copy Private Key to Clipboard</string>
	<string name="copied_to_clipboard">Copied to clipboard</string>
	<string name="private_key">Private Key</string>
	<string name="your_bitcoin_address">Your bitcoin address:</string>
	<string name="your_balance">Your balance:</string>
	<string name="bitcoin_address_title">Bitcoin Address</string>
	<string name="balance">Balance</string>
	<string name="approximate_fiat_value">Worth about %1$s %2$.2f</string>
	<string name="one_btc_in_fiat">Latest MtGox trade %1$s%2$s</string>
	<string name="no_server_connection">No Server Connection</string>
	<string name="no_network_connection">No Network Connection</string>
	<string name="send_bitcoins">Send Bitcoins</string>
	<string name="receive_bitcoins">Receive Bitcoins</string>
	<string name="invalid_bitcoin_uri">Invalid Bitcoin URI</string>
	<string name="no_private_key">Your wallet cannot send funds as it has no private keys</string>
	<string name="unrecognized_format">Unrecognized format</string>
	<string name="no_records">No Transaction Records</string>
	<string name="swipe">Swipe</string>
	<string name="left_arrow">&lt;</string>
	<string name="right_arrow">&gt;</string>
	<string name="created_new_random_key">New random Bitcoin address created</string>
	<string name="transaction_history">Transaction History</string>
	<string name="name">Name</string>
	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>
	<string name="edit_address_label_title">Enter Address Label</string>
	<string name="set_label">Set Label</string>
	<string name="show_details">Show Details</string>
	<string name="download_invoice">Download Invoice</string>
	<string name="downloading_invoice">Downloading Invoice</string>
	<string name="transaction_details">Transaction Details</string>
	<string name="hash">Hash</string>
	<string name="confirmed">Confirmed</string>
	<string name="date">Date</string>
	<string name="inputs">Inputs</string>
	<string name="outputs">Outputs</string>
	<string name="confirmed_in_block">In block #%1$d</string>
	<string name="no">No</string>
	<string name="yes">Yes</string>
	<string name="pref_category_pin">PIN Settings</string>
	<string name="pref_clear_pin">Clear PIN Code</string>
	<string name="pref_clear_pin_summary">Clear the current PIN code</string>
	<string name="pref_category_advanced">Advanced</string>
	<string name="pref_alternate_external_storage">Alternate External Storage</string>
	<string name="pref_alternate_external_storage_summary">Specify an alternate external storage directory</string>
	<string name="pref_set_pin">Set PIN Code</string>
	<string name="pref_set_pin_summary">Set a PIN code that restricts access to sending coins, exporting private keys, and changing the PIN code</string>
	<string name="pref_local_currency">Local Currency</string>
	<string name="pref_local_currency_summary">Select the local fiat currency</string>
	<string name="pref_bitcoin_denomination">Bitcoin Denomination</string>
	<string name="pref_bitcoin_denomination_summary">Switch between BTC, mBTC, and μBtc</string>
	<string name="pref_show_hints">Show Hints</string>
	<string name="pref_show_hints_summary">Enable or disable hints</string>
	<string name="settings">Settings</string>
	<string name="pin_invalid_pin">Invalid PIN code</string>
	<string name="pin_enter_pin">Enter PIN Code</string>
	<string name="pin_cleared">PIN code cleared</string>
	<string name="pin_enter_new_pin">Enter new PIN Code</string>
	<string name="pin_codes_dont_match">The two PIN codes do not match</string>
	<string name="pin_set">PIN code set</string>
	<string name="pin_confirm_pin">Confirm PIN Code</string>
	<string name="beta_build">Beta build version %1$s, use at your own risk.</string>
    <string name="select_recipient">Select Recipient</string>
    <string name="address_book_empty">Your address book is empty</string>
    <string name="show_qr_code">Show QR-code</string>
    <string name="delete_address_confirmation">Are you sure that you want to delete this address from your address book?</string>
    <string name="add_to_addressbook">Add to address book</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="payment_request">Payment Request</string>
    <string name="show_to_sender">Show to Sender</string>
    <string name="bitcoin_address_label">Bitcoin Address:</string>
    <string name="add_amount">Do you want to specify the amount to receive?</string>
    <string name="export_private_key_warning">Warning. You are about to export the private key that controls all the bitcoins of this address.\n\nAnyone who gains access to this key can take possession of the bitcoins it controls.\n\nDo you want to continue?</string>
    <string name="hint_title">Hint %1$d/%2$d</string>
    <string name="show_hints">Show hints</string>
    <string name="next_hint">Next</string>
    <string name="hint_1">Swipe left to manage your private keys and Bitcoin addresses.</string>
    <string name="hint_2">Swipe right to view the transaction history of your active Bitcoin address.</string>
    <string name="hint_3">You should always have a backup of your private keys. To backup a private key swipe left, tap a key, and select Export.</string>
    <string name="hint_4">You should protect your wallet with a PIN code. To set a PIN code click the options button and select Settings.</string>
    <string name="hint_5">By default the local currency is set to US dollars. To change the local currency click the options button and select Settings.</string>
    <string name="share_bitcoin_address">Share your Bitcoin address...</string>
    <string name="choose_export_mode">Chose Export Mode</string>
    <string name="external_storage">External Storage</string>
    <string name="export_to_external_storage">Export to External Storage</string>
    <string name="no_external_storage_found">No external storage location found on your device.\nYou have to insert a SD card with a folder called \'mycelium-export\'.</string>
    <string name="external_storage_location">External storage location:\n%1$s</string>
    <string name="exporting">Exporting...</string>
    <string name="export_succeeded">Exported to:\r\n%1$s</string>
    <string name="export_failed">Export failed:\r\n%1$s</string>
    <string name="jpeg_format">Export as JPG file</string>
    <string name="png_format">Export as PNG file</string>
    <string name="found_export_private_keys_title">Private Keys Found in Export Directory</string>
    <string name="found_export_private_keys_message">The export directory contains previously exported private keys.\r\nIt is not safe to leave private keys on your SD card. Do you want to delete them?</string>
    <string name="failed_to_delete_private_keys">Failed to delete exported private keys</string>
    <string name="found_clipboard_private_key_title">Private Key Found on Clipboard</string>
    <string name="found_clipboard_private_keys_message">The clipboard contains a private key.\r\nDo you want to delete it?</string>
    <string name="btc_rate">1 BTC = %1$s %2$.2f</string>
    <string name="read_only_warning">Warning: You are monitoring this address, but you cannot spend coins from it unless you have the private key elsewhere.</string>
    
</resources>
