<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvTitle"
        style="@style/GenericText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/tvHint"
        style="@style/GenericText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="left"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="18sp" />

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp" >

        <CheckBox
            android:id="@+id/cbShowHints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_hints" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" >
        </View>

        <Button
            android:id="@+id/btOk"
            style="@style/GenericButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_blue"
            android:text="@string/ok" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" >
        </View>

        <Button
            android:id="@+id/btNext"
            style="@style/GenericButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_blue"
            android:text="@string/next_hint" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" >
        </View>
    </LinearLayout>

</LinearLayout>