<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/llInfo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_black"
            android:orientation="vertical" >

            <!-- Amount: -->

            <LinearLayout
                android:id="@+id/llAmount"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    style="@style/GenericText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/amount"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/tvAmount"
                    style="@style/GenericText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:hint="@string/amount_hint"
                    android:lines="1"
                    android:singleLine="true"
                    android:textSize="22sp"
                    android:typeface="monospace" />

                <Button
                    android:id="@+id/btCurrency"
                    style="@style/GenericButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_blue_slim"
                    android:paddingLeft="3dp"
                    android:paddingRight="3dp"
                    android:text="@string/btc"
                    android:textSize="22sp"
                    android:typeface="monospace" />
            </LinearLayout>

            <!-- Alternative value -->

            <TextView
                android:id="@+id/tvAlternateAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginBottom="5dp"
            android:orientation="vertical" >

            <include
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                layout="@layout/number_entry" />
        </LinearLayout>

        <!-- Next -->

        <Button
            android:id="@+id/btNext"
            style="@style/GenericButton"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_blue"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/next"
            android:textSize="20sp" />
    </LinearLayout>

</ScrollView>