<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/btCopyToClipboard"
    android:layout_alignTop="@+id/tvTitle" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="0dp" >

        <TextView
            android:id="@+id/tvTitle"
            style="@style/GenericText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="0dp"
            android:background="@drawable/btn_black"
            android:orientation="vertical" >

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="0dp"
                android:paddingTop="5dp" >

                <ImageView
                    android:id="@+id/ivQrCode"
                    style="@style/QRCodeStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:contentDescription="@string/an_icon"
                    android:padding="0dp" />

                <TextView
                    android:id="@+id/tvSplash"
                    style="@style/GenericText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:shadowColor="@color/black"
                    android:shadowDx="0"
                    android:shadowDy="0"
                    android:shadowRadius="10"
                    android:text="@string/show_to_sender"
                    android:textColor="@color/red"
                    android:textStyle="bold"
                    android:textSize="40sp" />
            </FrameLayout>

            <Button
                android:id="@+id/btCopyToClipboard"
                style="@style/GenericButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/btn_blue"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/copy_address_to_clipboard" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:orientation="vertical" >

            <TextView
                style="@style/GenericText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bitcoin_address_label"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvAddress1"
                style="@style/GenericText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:gravity="left"
                android:paddingLeft="40dp"
                android:textSize="18sp"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/tvAddress2"
                style="@style/GenericText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:gravity="left"
                android:paddingLeft="40dp"
                android:textSize="18sp"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/tvAddress3"
                style="@style/GenericText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:gravity="left"
                android:paddingLeft="40dp"
                android:textSize="18sp"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/tvAmountLabel"
                style="@style/GenericText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="left"
                android:paddingTop="10dp"
                android:text="@string/amount"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvAmount"
                style="@style/GenericText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="left"
                android:paddingLeft="40dp"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>